# boolean.py

./: .gitignore  .travis.yml  CHANGELOG.rst  LICENSE.txt  MANIFEST.in  README.md  README.rst  package.json  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/workflows/: pypi-release.yml  test-and-build.yml
boolean/: __init__.py  boolean.html  boolean.py  test_boolean.py
boolean.js/: index.html
boolean/__javascript__/: boolean.js
docs/: Makefile  acknowledgements.rst  concepts.rst  conf.py  development_guide.rst  index.rst  users_guide.rst
docs/api/: boolean.rst  modules.rst
etc/: preprocess.py  requirements.txt  transpile.py
tests/: mock_advanced_algebra.py  mock_custom_algebra.py  test_boolean.py  test_parse.py
tests.js/: test_boolean.js
transpile/: requirements.txt  transpile.py  transpile.yml
