[bdist_wheel]
universal = 1

[aliases]
release = clean --all sdist --formats=gztar bdist_wheel register upload

[metadata]
license_files =
    LICENSE.txt
    README.md
    CHANGELOG.rst

[tool:pytest]
norecursedirs =
    .git
    dist
    build
    docs
    .cache
    tmp

python_files = *.py

python_classes=Test
python_functions=test

addopts =
    -rfExXw
    --strict
    --ignore setup.py
    --doctest-modules
