[metadata]
license_files =
    LICENSE.txt
    README.rst
    CHANGELOG.rst

[tool:pytest]
norecursedirs =
    .git
    dist
    build
    docs
    .cache
    tmp

python_files = *.py

python_classes=Test
python_functions=test

addopts =
    -rfExXw
    --strict-markers
    --ignore setup.py
    --doctest-modules
